# http4k

./: .buildnote.json  .codebeatignore  .editorconfig  .gitignore  .java-version  .justfile  .travis.yml  BUILD  BUILD.bazel  CHANGELOG.md  CHANGELOG_v6.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PLAN-MCP-APPS.md  PLAN-MCP_APPS_HOST.md  PLAN.md  PLAN2.md  PROGRESS.md  README.md  RenderingTest - render successful trace - Sequence.puml  SECURITY-DESIGN.md  SECURITY.md  SUPPORT.md  TEST_PLAN.md  TEST_PLAN_2.md  VERIFYING.md  WORKSPACE.bazel  a2a-spec.md  a2aspec.ts  build-ci.sh  build.gradle  build.gradle.kts  build.sh  build_release_note.sh  build_site.sh  create_and_push_tag.sh  delete_tag.sh  delete_version.sh  (+39 more)
bob/: model.kt
http4k-core/: BUILD.bazel  build.gradle  build.gradle.kts
http4k-core/src/main/: BUILD.bazel
http4k-core/src/main/java/org/http4k/: LineTokenizer.java  MimeTypeEntry.java  MimeTypeFile.java  MimetypesFileTypeMap.java  SecuritySupport.java
http4k-core/src/main/kotlin/org/http4k/: Credentials.kt  KotlinExtensions.kt
http4k-core/src/main/kotlin/org/http4k/client/: Java8HttpClient.kt  JavaHttpClient.kt  ResponseBodyMode.kt  async.kt  deprecatedCore.kt  ext.kt
http4k-core/src/main/kotlin/org/http4k/context/: RequestContext.kt  RequestContextKey.kt  RequestContexts.kt
http4k-core/src/main/kotlin/org/http4k/contract/: ErrorResponseRenderer.kt
http4k-core/src/main/kotlin/org/http4k/core/: Accept.kt  BodyMode.kt  ContentType.kt  Credentials.kt  Headers.kt  Http4k.kt  HttpTransaction.kt  MimeTypes.kt  Parameters.kt  Reekwest.kt  RequestContext.kt  RequestContexts.kt  ResourceLoader.kt  ResponseCacheExt.kt  StaticContent.kt  Status.kt  Store.kt  Uri.kt  UriTemplate.kt  async.kt  curl.kt  deprecatedCore.kt  events.kt  ext.kt  http.kt  mydataclass.kt  parser.kt  values4kExtensions.kt  webformExtensions.kt
http4k-core/src/main/kotlin/org/http4k/events/: AutoJsonEvents.kt  EventFilters.kt  HttpEvent.kt  deprecatedCore.kt  events.kt
http4k-core/src/main/kotlin/org/http4k/filter/: CachingFilters.kt  ChaosFilters.kt  ClientFilters.kt  ConditionalFilter.kt  DebuggingFilters.kt  FlashAttributesFilter.kt  GenerateDataClasses.kt  GenerateXmlDataClasses.kt  Gzip.kt  OriginPolicy.kt  RecordTraffic.kt  RequestFilters.kt  ResponseFilters.kt  ServerFilters.kt  Traffic.kt  TrafficCache.kt  TrafficFilters.kt  TrafficRecall.kt  TrafficReplay.kt  TrafficStorage.kt  ZipkinTraces.kt  conditional.kt  deprecatedCore.kt  ext.kt  internal.kt
http4k-core/src/main/kotlin/org/http4k/filters/: ClientFilters.kt  DebuggingFilters.kt  RequestFilters.kt  ResponseFilters.kt  ServerFilters.kt  ZipkinTraces.kt
http4k-core/src/main/kotlin/org/http4k/format/: AutoMappingConfiguration.kt  AutoMarshalling.kt  AutoMarshallingJson.kt  AutoMarshallingXml.kt  AutoXmlContract.kt  ConfigureAutoMarshallingJson.kt  Json.kt  JsonErrorResponseRenderer.kt
http4k-core/src/main/kotlin/org/http4k/formats/: Json.kt  JsonErrorResponseRenderer.kt
http4k-core/src/main/kotlin/org/http4k/lens/: BiDiMapping.kt  Body.kt  Cookies.kt  Form.kt  Header.kt  Lens.kt  LensCreator.kt  LensExtractor.kt  LensFailure.kt  LensInjector.kt  LensSpec.kt  Meta.kt  ParamMeta.kt  Path.kt  Query.kt  RequestContextKey.kt  Validator.kt  biDiMappingExtensions.kt  body.kt  delegatedProperties.kt  ext.kt  extensions.kt  extractInject.kt  header.kt  headerExtensions.kt  lens.kt  lensExtensions.kt  lensFailure.kt  lensSpec.kt  path.kt  query.kt  reflect.kt  values4kExtensions.kt  webForm.kt  wsMessageLens.kt
http4k-core/src/main/kotlin/org/http4k/metrics/: MetricsDefaults.kt
http4k-core/src/main/kotlin/org/http4k/routing/: AggregateRoutingHttpHandler.kt  HostDemuxRoutingHttpHandler.kt  InMemoryResource.kt  Module.kt  NewResourceLoader.kt  NewStaticRoutingHttpHandler.kt  ParameterMatchRoutingHttpHandler.kt  Passthrough.kt  RequestMatchRoutingHttpHandler.kt  Resource.kt  ResourceLoader.kt  ResourceLoadingHandler.kt  Router.kt  RouterBasedHttpHandler.kt  RouterRoutingHandler.kt  RouterRoutingHttpHandler.kt  Routing.kt  Routing2.kt  RoutingHttpHandler.kt  SinglePageAppRoutingHandler.kt  StaticRouter.kt  StaticRoutingHttpHandler.kt  TemplateRoutingHttpHandler.kt  TemplateRoutingWsHandler.kt  common.kt  extensions.kt  internal.kt  messages.kt  routing.kt  spa.kt  sse.kt  static.kt  webJars.kt  websockets.kt
http4k-core/src/main/kotlin/org/http4k/security/: CredentialsProvider.kt  HmacSha256.kt
http4k-core/src/main/kotlin/org/http4k/server/: HttpExchangeHandler.kt  PolyHandler.kt  SunHttp.kt  SunHttpServer.kt  Websocket.kt  WebsocketMsg.kt  WsMessage.kt  http4kServer.kt
http4k-core/src/main/kotlin/org/http4k/serverless/: AppLoader.kt  AppLoaderWithContexts.kt
http4k-core/src/main/kotlin/org/http4k/servlet/: Http4kServletAdapter.kt  servlet.kt
http4k-core/src/main/kotlin/org/http4k/sse/: SseClient.kt  SseStatus.kt  WsClient.kt  sse.kt
http4k-core/src/main/kotlin/org/http4k/template/: Templates.kt  ViewModel.kt  ViewNotFound.kt
http4k-core/src/main/kotlin/org/http4k/templates/: Templates.kt  ViewModel.kt  ViewNotFound.kt
http4k-core/src/main/kotlin/org/http4k/testing/: RecordingEvents.kt  TestWsClient.kt  wsClient.kt
http4k-core/src/main/kotlin/org/http4k/traffic/: ReadWriteCache.kt  ReadWriteStream.kt  Replay.kt  Responder.kt  Sink.kt  Source.kt  Traffic.kt  internal.kt
http4k-core/src/main/kotlin/org/http4k/util/: ByteBufferBackedInputStream.kt  Hex.kt  JsonSchemaCreator.kt  Result.kt  executionServiceExtensions.kt  (+2 more)
http4k-core/src/test/kotlin/org/http4k/: CurlTest.kt  TracingFunctionalTest.kt  extensions.kt
http4k-core/src/test/resources/: BUILD.bazel
http4k-core/src/test/resources/bar/: bar-xyz.html  bar.html  index.html
http4k-core/src/test/resources/bar/bar/: bar-xyz.html
http4k-core/src/test/resources/dir/: file.html
http4k-core/src/test/resources/public/: index.html
http4k-format/jackson/: BUILD.bazel  build.gradle  build.gradle.kts
http4k-format/jackson-yaml/: BUILD.bazel  build.gradle  build.gradle.kts
http4k-testing/approval/: BUILD.bazel  build.gradle  build.gradle.kts
(+12520 files in other folders)
