load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "http4k-core",
    srcs = glob(["src/main/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:dev_forkhandles_result4k",
        "@maven//:dev_forkhandles_values4k",
    ],
)

