load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "http4k-core",
    srcs = glob(["src/main/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:dev_forkhandles_result4k",
        "@maven//:dev_forkhandles_values4k",
    ],
)

kt_jvm_test(
    name = "tests",
    srcs = glob(["**/*Test.kt"]),
    deps = [
        ":http4k-core",
       "@maven//:org_junit_jupiter_junit_jupiter_api",
       "@maven//:org_junit_jupiter_junit_jupiter_engine",
       "@maven//:com_natpryce_hamkrest",
       "@maven//:org_jetbrains_kotlin_kotlin_reflect",
    ],
)
