load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "main",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:dev_forkhandles_result4k",
        "@maven//:dev_forkhandles_values4k",
    ],
)

kt_jvm_test(
    name = "tests",
    srcs = glob(["**/*.kt"]),
    resources = ["//http4k-core/src/test/resources:test-deps"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
    "--select-package=org.http4k",
    ],
    deps = [
        "//http4k-core:main",
        "//http4k-client/apache:main",
        "//http4k-server/apache:main",
        "//http4k-testing/approval:main",
        "//http4k-testing/hamkrest:main",
       "@maven//:org_junit_jupiter_junit_jupiter_api",
       "@maven//:org_junit_jupiter_junit_jupiter_engine",
       "@maven//:com_natpryce_hamkrest",
       "@maven//:org_jetbrains_kotlin_kotlin_reflect",
       "@maven//:org_junit_platform_junit_platform_console",
    ],
)


