load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "main",
    visibility = ["//visibility:public"],
    srcs = glob(["src/main/**/*.kt"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "//http4k-core:main",
        "//http4k-format/jackson-yaml:main",
        "@maven//:com_github_javadev_underscore",
       "@maven//:org_junit_jupiter_junit_jupiter_api",
       "@maven//:org_junit_jupiter_junit_jupiter_engine",
       "@maven//:com_natpryce_hamkrest",
    ],
)

